# HTRApp

./: .gitignore  CMakeLists.txt  README.md
include/HTRApp/: dataset.cpp  dataset.h  datasetitem.cpp  datasetitem.h  image.cpp  image.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  neuralnetwork.cpp  neuralnetwork.h  paintscene.cpp  paintscene.h
src/: main.cpp  train.cpp
tests/: tests.cpp
